--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
         <input class="enter-name" type="text" placeholder="What is Your name?">
     </div>
     <div class="game-info">
-        <div class="name">
+        <div class="info">
+            <div class="name">
             Hello: <span></span>
         </div>
         <div class="tries">
             Wrong Tries: <span>0</span>
+        </div>
+        </div>
+        <div class="timer">
+            <span class="seconds">60</span>
+            <div class="timer-bar"><span style="width: 100%; height: 100%;"></span></div>
         </div>
     </div>
     <div class="game-blocks">
@@ -141,6 +147,7 @@
             </div>
         </div>
     </div>
+    <div class="leader-board"></div>
     <audio id="success" src="success.mp3" preload="auto"></audio>
     <audio id="fail" src="fail.mp3" preload="auto"></audio>
     <script src="main.js"></script>
